# Pyaket

./: .gitignore  404.html  Cargo.toml  Dockerfile  action.yml  dockerfile  index.html  license-mit.txt  mkdocs.yml  objects.inv  packer.py  pyaket.toml  pyproject.toml  readme.md  release.py  sitemap.xml  zensical.toml
.cargo/: config.toml
.github/: contributing.md  readme.md  security.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  config.yml
.github/workflows/: make-crate.yml  make-docker.yml  make-pyaket.yml  make-pypi.yml  make-website.yml
Pyaket/: Cargo.toml  Project.py  __init__.py  __main__.py  build.rs  deny.toml
Pyaket/.cargo/: config.toml
Pyaket/Pyaket/: logging.rs  main.rs  project.rs
Pyaket/Rust/: Common.rs  Main.rs  archive.rs  assets.rs  common.rs  environment.rs  lib.rs  logging.rs  main.rs  network.rs  project.rs
Website/: CNAME  faq.md  make.py
Website/about/: changelog.md  credits.md  license.md  roadmap.md
Website/docs/: configuration.md  env.md  index.md  pinning.md
Website/faq/: general.md  linux.md  windows.md
Website/get/: rust.md
about/changelog/: index.html
about/contact/: index.html
about/credits/: index.html
about/license/: index.html
about/roadmap/: index.html
docs/: index.html
docs/configuration/: index.html
docs/crosscompile/: index.html
docs/pinning/: index.html
faq/: index.html
faq/alternatives/: index.html
faq/general/: index.html
faq/linux/: index.html
faq/macos/: index.html
faq/windows/: index.html
get/: index.html
get/rust/: index.html
pyaket/: .rustfmt.toml  Cargo.toml  __init__.py  __main__.py  _release.py  build.rs  deny.toml  project.py  rustman.py  shims.py  targets.py
pyaket/pyaket/: archive.rs  assets.rs  builder.rs  envy.rs  lib.rs  logging.rs  main.rs  network.rs  project.rs  runtime.rs  subprocess.rs
pyaket/pyaket/commands/: mod.rs  uv.rs  version.rs
pyaket/pyaket/packer/: main.rs
pyaket/pyaket/runtime/: main.rs  mod.rs
pyaket/pyaket/runtime/commands/manager/: uninstall.rs  version.rs
pyaket/resources/: targets.json
scripts/: benchmark-profile.py  benchmark-profiles.py  version.py
scripts/benchmark/: profiles.py
search/: search_index.json
website/: changelog.md  license.md  make.py
website/about/: changelog.md  community.md  contact.md  contributing.md  credits.md  license.md  mission.md  roadmap.md  security.md
website/css/: main.css
website/docs/: crosscompile.md  crosscompiling.md  index.md  pinning.md
website/docs/config/: application.md  dependencies.md  directories.md  entry.md  index.md  python.md  pytorch.md
website/docs/project/: application.md  dependencies.md  directories.md  entry.md  python.md  pytorch.md
website/docs/rust/: crosscompiling.md  profiles.md
website/examples/: index.md
website/faq/: alternatives.md  general.md  linux.md  macos.md  windows.md
website/get/: crate.md  docker.md  executables.md  index.md  pypi.md  python.md  release.md  rust.md  source.md
website/get/ci/: github.md  gitlab.md
website/get/tools/: rust.md
website/help/: general.md
website/overrides/: main.html
