# The binary is under a workspace so it can be bundled to a
# Python wheel release on PyPI, and compiled from the venv
[workspace]
members = ["Pyaket"]
resolver = "3"

[profile.dev]
strip = true       # Fast enough in dev mode to save a few disk writes

[profile.release]
codegen-units = 1  # Slighlty improves binary size at no significant slowdown
incremental = true # Faster recompilation times for multiple projects
opt-level = 3      # Opt size weird performance on hashing algorithms
panic = "abort"    # No need to unwind full traceback as not primary rust app
strip = true       # Reduces binary size by quite a lot due few fat crates
lto = false        # Annoyingly slow linking times even with mold, ldd

[profile.small]
inherits = "release"
opt-level = "z"
lto = true
