[project.urls]
GitHub    = "https://github.com/BrokenSource/Pyaket"
Changelog = "https://pyaket.dev/about/changelog"
Contact   = "https://pyaket.dev/about/contact"
Docs      = "https://pyaket.dev/docs"
Homepage  = "https://pyaket.dev"

[project]
name        = "pyaket"
description = "📦 Easy Python to Fast Executables"
authors     = [{name="Tremeschin"}]
version     = "0.10.1"
readme      = "readme.md"
license     = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "attrs~=25.0",
    "dotmap~=1.3",
    "pillow~=12.0",
    "pydantic~=2.12",
    "rich~=14.2",
    "rustbin~=1.28",
    "structlog~=25.5",
    "typer~=0.21",
]

[project.scripts]
pyaket = "pyaket.__main__:main"

[project.optional-dependencies]
xwin = ["cargo-xwin", "ninja"]
zig  = ["cargo-zigbuild", "ziglang"]
all  = ["pyaket[zig]"]

[dependency-groups]
dev = ["pyaket[all]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyaket"]
exclude = [
    "pyaket/deny.toml",
    "pyaket/.rustfmt.toml",
]
