[project]
name        = "pyaket"
description = "📦 Easy Python to Fast Executables"
authors     = [{name="Tremeschin"}]
version     = "0.10.1"
readme      = "readme.md"
license     = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "attrs",
    "dearlog",
    "dotmap",
    "pillow",
    "pydantic",
    "rustbin",
    "typer",
]

[project.urls]
GitHub = "https://github.com/BrokenSource/Pyaket"

[project.scripts]
pyaket = "pyaket.__main__:main"

[project.optional-dependencies]
xwin = ["cargo-xwin", "ninja"]
zig  = ["cargo-zigbuild", "ziglang"]
all  = [
    "pyaket[xwin]",
    "pyaket[zig]",
]

[dependency-groups]
dev = ["pyaket[all]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyaket"]
exclude = [
    "pyaket/deny.toml",
    "pyaket/.rustfmt.toml",
]
