[project]
name        = "pyaket"
description = "📦 Easy Python to Fast Executables"
authors     = [{name="Tremeschin"}]
version     = "0.11.0"
readme      = "readme.md"
license     = "MIT OR Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "attrs",
    "dearlog",
    "parsenaut",
    "pillow",
    "pydantic",
    "rustbin",
]

[project.urls]
GitHub = "https://github.com/BrokenSource/Pyaket"

[project.scripts]
pyaket = "pyaket.__main__:main"

[project.optional-dependencies]
xwin = ["cargo-xwin<=0.22.0", "ninja"]
zig  = ["cargo-zigbuild", "ziglang"]
all  = [
    "pyaket[xwin]",
    "pyaket[zig]",
]

[dependency-groups]
dev = ["pyaket[all]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyaket"]
exclude = [
    "pyaket/deny.toml",
    "pyaket/.rustfmt.toml",
]
