[package]
name          = "pyaket"
version       = "0.2.0"
authors       = ["Tremeschin"]
description   = "📦 Easy Python to → Fast Executables"
repository    = "https://github.com/BrokenSource/Pyaket"
documentation = "https://pyaket.dev/docs/"
homepage      = "https://pyaket.dev/"
readme        = "readme.md"
license       = "AGPL-3.0"
edition       = "2024"

[dependencies]
anyhow        = "1.0.97"
bzip2         = "0.5.2"
directories   = "6.0.0"
dotenvy       = "0.15.7"
flate2        = "1.1.1"
glob          = "0.3.2"
once_cell     = "1.21.3"
reqwest       = {version="0.12.15", features=["blocking"]}
rust-embed    = "8.7.0"
serde         = {version="1.0.219", features=["derive"]}
serde_json    = "1.0.140"
shlex         = "1.3.0"
smart-default = "0.7.1"
spinners      = "4.1.1"
tar           = "0.4.44"
temp-dir      = "0.1.14"
uuid          = {version="1.16.0", features=["v4"]}
xxhash-rust   = {version="0.8.15", features=["xxh3"]}
zip           = "2.6.0"
zstd          = "0.13.3"

[build-dependencies]
anyhow        = "1.0.97"
bzip2         = "0.5.2"
directories   = "6.0.0"
dotenvy       = "0.15.7"
flate2        = "1.1.1"
glob          = "0.3.2"
once_cell     = "1.21.3"
reqwest       = {version="0.12.15", features=["blocking"]}
rust-embed    = "8.7.0"
serde         = {version="1.0.219", features=["derive"]}
serde_json    = "1.0.140"
shlex         = "1.3.0"
smart-default = "0.7.1"
spinners      = "4.1.1"
tar           = "0.4.44"
temp-dir      = "0.1.14"
uuid          = {version="1.16.0", features=["v4"]}
xxhash-rust   = {version="0.8.15", features=["xxh3"]}
zip           = "2.6.0"
zstd          = "0.13.3"

[[bin]]
name = "pyaket"
path = "Rust/Main.rs"
