[package]
name          = "pyaket"
version       = "0.1.0"
authors       = ["Tremeschin"]
description   = "📦 Easy Python to → Fast Executables"
repository    = "https://github.com/BrokenSource/Pyaket"
documentation = "https://pyaket.dev/docs/"
homepage      = "https://pyaket.dev/"
readme        = "readme.md"
license       = "AGPL-3.0"
edition       = "2024"

[dependencies]
anyhow        = "1.0.97"
bzip2         = {version="0.5.2", features=["libbz2-rs-sys"], optional=true}
directories   = "6.0.0"
dotenvy       = "0.15.7"
flate2        = "1.1.1"
glob          = "0.3.2"
rust-embed    = "8.7.0"
serde         = {version="1.0.219", features=["derive"]}
serde_json    = "1.0.140"
shlex         = "1.3.0"
smart-default = "0.7.1"
tar           = "0.4.44"
temp-dir      = "0.1.14"
ureq          = "3.0.10"
uuid          = {version="1.16.0", features=["v4"]}
xxhash-rust   = {version="0.8.15", features=["xxh3"]}
zip           = {version="2.6.0", features=["deflate"], default-features=false}
zstd          = {version="0.13.3", optional=true}

[build-dependencies]
anyhow        = "1.0.97"
bzip2         = {version="0.5.2", features=["libbz2-rs-sys"], optional=true}
directories   = "6.0.0"
dotenvy       = "0.15.7"
flate2        = "1.1.1"
glob          = "0.3.2"
rust-embed    = "8.7.0"
serde         = {version="1.0.219", features=["derive"]}
serde_json    = "1.0.140"
shlex         = "1.3.0"
smart-default = "0.7.1"
tar           = "0.4.44"
temp-dir      = "0.1.14"
ureq          = "3.0.10"
uuid          = {version="1.16.0", features=["v4"]}
xxhash-rust   = {version="0.8.15", features=["xxh3"]}
zip           = {version="2.6.0", features=["deflate"], default-features=false}
zstd          = {version="0.13.3", optional=true}

[lib]
name = "pyaket"
path = "Rust/lib.rs"

[[bin]]
name = "pyaket"
path = "Rust/main.rs"

[features]
zstd = ["dep:zstd"]
bzip2 = ["dep:bzip2"]

[profile.dev]
strip = true       # Actually faster to compile and saves SSD writes, win-win

[profile.release]
codegen-units = 1  # Slighlty improves binary size at no significant slowdown
incremental = true # Faster recompilation times for multiple projects
opt-level = 3      # Milisseconds matter in production, time is money
panic = "abort"    # No need to unwind full traceback as not primary rust app
strip = true       # Reduces binary size by quite a lot due few fat crates
lto = false        # Annoyingly slow linking times for minor size reduction

# About 5x slower to compile for 15% size reduction
# and 35% slower decompression time
[profile.small]
inherits = "release"
opt-level = 'z'
lto = true
