# ---------------------------------------------------------------------------- #

[package]
name          = "pyaket"
version       = "0.10.0"
authors       = ["Tremeschin"]
description   = "📦 Easy Python to Fast Executables"
repository    = "https://github.com/BrokenSource/Pyaket"
documentation = "https://pyaket.dev/docs/"
homepage      = "https://pyaket.dev/"
readme        = "../.github/readme.md"
license       = "AGPL-3.0"
edition       = "2024"

[workspace]
resolver = "3"

# ---------------------------------------------------------------------------- #

[lib]
name = "pyaket"
path = "pyaket/lib.rs"

[[bin]]
name = "pyaket"
path = "pyaket/main.rs"

# ---------------------------------------------------------------------------- #

[dependencies]
anyhow        = {version="1.0.100"}
clap          = {version="4.5.51", features=["derive"]}
directories   = {version="6.0.0"}
dotenvy       = {version="0.15.7"}
glob          = {version="0.3.3"}
rust-embed    = {version="8.9.0", features=["interpolate-folder-path"]}
serde         = {version="1.0.228", features=["derive"]}
serde_json    = {version="1.0.145"}
shlex         = {version="1.3.0"}
smart-default = {version="0.7.1"}
temp-dir      = {version="0.1.16"}
uuid          = {version="1.18.1", features=["v4"]}
uv            = {version="0.9.9", git="https://github.com/astral-sh/uv/", default-features=false}

[build-dependencies]
anyhow        = {version="1.0.100"}
clap          = {version="4.5.51", features=["derive"]}
directories   = {version="6.0.0"}
dotenvy       = {version="0.15.7"}
glob          = {version="0.3.3"}
rust-embed    = {version="8.9.0", features=["interpolate-folder-path"]}
serde         = {version="1.0.228", features=["derive"]}
serde_json    = {version="1.0.145"}
shlex         = {version="1.3.0"}
smart-default = {version="0.7.1"}
temp-dir      = {version="0.1.16"}
uuid          = {version="1.18.1", features=["v4"]}
winresource   = {version="0.1.27", default-features=false}

# ---------------------------------------------------------------------------- #

[features]

[lints.rust]
unexpected_cfgs = {level="warn", check-cfg=["cfg(runtime)", "cfg(rust_analyzer)"]}

# ---------------------------------------------------------------------------- #

# Warn: Anti-pattern in `$target/$triple/debug` not matching the profile name,
# as such python will always use the `develop` profile, which mirrors this.
[profile.dev]
opt-level = 1
panic = "abort"
strip = true

# Warn: Not recommended, as releases can either be 'small' or 'speed', otherwise
# same as 'speed' profile, which mirrors this.
[profile.release]
codegen-units = 1
incremental = true
opt-level = 3
panic = "abort"
lto = true

[profile.develop]
inherits = "dev"

[profile.speed]
inherits = "release"

[profile.small]
inherits = "release"
opt-level = "s"
lto = true
