# ---------------------------------------------------------------------------- #

[package]
name          = "pyaket"
version       = "0.10.0"
authors       = ["Tremeschin"]
description   = "📦 Easy Python to Fast Executables"
repository    = "https://github.com/BrokenSource/Pyaket"
documentation = "https://pyaket.dev/docs/"
homepage      = "https://pyaket.dev/"
readme        = "../readme.md"
license       = "AGPL-3.0"
edition       = "2024"

# ---------------------------------------------------------------------------- #

[lib]
name = "pyaket"
path = "pyaket/lib.rs"

[[bin]]
name = "pyaket"
path = "pyaket/main.rs"

# ---------------------------------------------------------------------------- #

[dependencies]
anyhow        = {version="1.0.100"}
clap          = {version="4.5.54", features=["derive"]}
dialoguer     = {version="0.12.0", default-features=false}
directories   = {version="6.0.0"}
dotenvy       = {version="0.15.7"}
glob          = {version="0.3.3"}
rust-embed    = {version="8.9.0"}
serde         = {version="1.0.228", features=["derive"]}
serde_json    = {version="1.0.149"}
shlex         = {version="1.3.0"}
smart-default = {version="0.7.1"}
temp-dir      = {version="0.1.16"}
uv            = {version="0.9.24", optional=true, default-features=false}

[build-dependencies]
anyhow      = {version="1.0.100"}
glob        = {version="0.3.3"}
rust-embed  = {version="8.9.0", features=["interpolate-folder-path"]}
winresource = {version="0.1.29", default-features=false}

# ---------------------------------------------------------------------------- #

[features]
default = ["uv"]

# Compile against and use astral-sh/uv as a dependency.
#
# Should always be enabled on releases for actual functionality, otherwise
# use any 'uv' binary found on PATH - for quick iterative development.
uv = ["dep:uv"]

# ---------------------------------------------------------------------------- #

# Note: Not recommended, anti-pattern in `$target/$triple/debug`
# not matching the profile name in target directory
[profile.dev]
opt-level = 1
panic = "abort"
strip = true

# Note: Not recommended, per release flavors below
[profile.release]
codegen-units = 1
opt-level = 3
panic = "abort"
lto = "thin"

# ---------------------------------------------------------------------------- #
# https://pyaket.dev/docs/rust/profiles/

[profile.develop]
inherits = "dev"
debug = false

[profile.fast]
inherits = "release"

[profile.fastest]
inherits = "fast"
lto = "fat"

[profile.small]
inherits = "release"
opt-level = "s"

[profile.smallest]
inherits = "small"
lto = "fat"
